Fix(ui) : Messagerie - Adjust main content size to make the page take all the screen. - Change background colors of the messagerie's content to follow chart - Fix many positions and spacing. - Change some font color to follow charts (--gris-text) - add a modifier for the send message button,  which allow to give it a different size

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -43,7 +43,7 @@ body {
     height: 100vh;
     min-width: 90rem;
     margin: 0;
-    background-color: var(--bg-color-medium2);
+    background-color: var(--bg-color-medium);
     font-family: var(--font-family), sans-serif;
     font-weight: 400;
     font-size: var(--font-size);
@@ -62,6 +62,8 @@ body {
     margin: 0 auto;
     display: flex;
     flex-flow: column nowrap;
+    height: 100%;
+    background-color: var(--bg-color-medium2);
 }
 
 .container {
@@ -119,6 +121,10 @@ body {
     align-items: center;
 }
 
+.container--with-space-on-sides {
+    padding : 0 var(--main-padding-sides);
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -165,6 +171,7 @@ li {
     text-decoration: none;
     font-weight:600;
     font-size: 1rem;
+    border: 0;
 }
 
 .bigButton--dark {
@@ -175,6 +182,11 @@ li {
     background-color: var(--bg-color-medium2);
     color: var(--vert-principal);
     border: 1px solid var(--vert-principal);
+}
+
+.bigButton--inline {
+    padding: 0.75rem 2rem;
+    margin-left: 1.255rem;
 }
 
 .formField, .formField--darker {
