--- a/assets/css/pages/messagerie.css
+++ b/assets/css/pages/messagerie.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: row;
     height: 100%;
+    background-color: var(--bg-color-medium2);
 }
 
 .threads__list {
@@ -14,7 +15,13 @@
     flex-direction: column;
     width: 19.25rem;
     max-width: 100%;
+    padding: 3.5rem 0;
 }
+
+.threads__list h1 {
+    margin: 0 0 1.6875rem 2.125rem;
+}
+
 
 .threads__item {
     box-sizing: border-box;
@@ -52,12 +59,23 @@
     max-width: 100%;
     overflow: hidden;
     display: inline-block;
+    color: var(--gris-texte);
+}
+
+.container--thread {
+    padding: 0 0 0 2.75rem;
+}
+
+.container--thread > .container__header {
+    margin-top: 2.25rem;
+    padding: 0;
 }
 
 .container--thread > .container__main {
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-end;
+    padding : 0 0 6.125rem 0;
 }
 
 .container--thread > .container__footer  {
@@ -66,6 +84,7 @@
     align-items: center;
     justify-content: flex-start;
     height: 3.0625rem;
+    margin: 0 0 3.75rem 0;
 }
 
 .message-container, .message-container--sender-is-not-me {
@@ -83,12 +102,15 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    color: var(--gris-texte);
 }
 
 .message-container__message {
     flex: 0 0 auto;
     gap : 1.5625rem;
     background-color: var(--bg-color-light);
+    padding: 0.625rem 1.125rem;
+    border-radius: 0.38rem;
 }
 
 .message-container--sender-is-me .message-container__message {
@@ -102,9 +124,4 @@
     aspect-ratio: 1;
     display: flex;
     border-radius: 50%;
-}
-
-.bigButton.bigButton--messagerie {
-    padding: 0;
-    height: 100%;
 }
